force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Custom_Quantity__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>