force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LCPR_Prix__c.field-meta.xml
<CustomField>
    <fullName>LCPR_Prix__c</fullName>
    <label>Prix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>