force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <formula>SBQQ__Quote__r.LPCR_NumeroDevis__c  &amp;&quot;-&quot;&amp; LPCR_NumeroPOAutomatique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Number</label>
    <type>Text</type>
</CustomField>