force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ApprobationPrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ApprobationPrix__c</fullName>
    <formula>IF(SBQQ__CustomerPrice__c  =  SBQQ__ListPrice__c, &#39;0&#39; , &#39;1&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approbation Prix</label>
    <type>Text</type>
</CustomField>