force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_BillingMultiplier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BillingMultiplier__c</fullName>
    <label>Billing Multiplier</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>