force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_BillThroughDateOverride__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BillThroughDateOverride__c</fullName>
    <description>Champ utilisé pour le prorata</description>
    <label>Bill Through Date Override</label>
    <type>Date</type>
</CustomField>