force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_CAUnitaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CAUnitaire__c</fullName>
    <inlineHelpText>Chiffre d&apos;affaires généré par cette ligne de devis.</inlineHelpText>
    <label>CA Commercial Unitaire LD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>