force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Clone__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clonée</label>
    <type>Checkbox</type>
</CustomField>