force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_CloneCancel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CloneCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone/Cancel</label>
    <type>Checkbox</type>
</CustomField>