force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_CompteFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte famille</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Famille</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lignes de devis (Compte famille)</relationshipLabel>
    <relationshipName>Lignes_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>