force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ContactEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Enfant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lignes de devis</relationshipLabel>
    <relationshipName>Lignes_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>