force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ContactFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Facturation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lignes de devis (Contact Facturation)</relationshipLabel>
    <relationshipName>Lignes_de_devis1</relationshipName>
    <type>Lookup</type>
</CustomField>