force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ContactInscriptions__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactInscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Inscriptions</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lignes de devis (Contact Inscriptions)</relationshipLabel>
    <relationshipName>Lignes_de_devis3</relationshipName>
    <type>Lookup</type>
</CustomField>