force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ContactPrincipal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lignes de devis (Contact Principal)</relationshipLabel>
    <relationshipName>Lignes_de_devis4</relationshipName>
    <type>Lookup</type>
</CustomField>