force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crèche</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Crèche</value>
        </filterItems>
        <filterItems>
            <field>Account.LPCR_Region__c</field>
            <operation>equals</operation>
            <valueField>$Source.LPCR_Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>