force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_DateDebutNonConforme__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutNonConforme__c</fullName>
    <formula>IF(
AND(
OR(ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Quote&apos;),
AND(
ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Amendment&apos;),
NOT(LPCR_Clone__c),
NOT(SBQQ__Existing__c))),
NOT(ISBLANK( LPCR_DateDebut__c )),
LPCR_DateDebut__c &lt; SBQQ__Quote__r.SBQQ__StartDate__c ) ,
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début non conforme</label>
    <type>Checkbox</type>
</CustomField>