force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_HoldReason__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HoldReason__c</fullName>
    <label>Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>