force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_IdExterne_Devis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Devis__c</fullName>
    <label>Id Externe Devis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>