force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_IdExterne_Quote__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Quote__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>