force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Indexation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Indexation__c</fullName>
    <formula>(SBQQ__Uplift__c * ( SBQQ__RenewedSubscription__r.SBQQ__CustomerPrice__c  /  SBQQ__RenewedSubscription__r.SBQQ__ProrateMultiplier__c ))  *  SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indexation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>