force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_IndexationCustom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IndexationCustom__c</fullName>
    <label>Indexation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>