force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_IndexationQuote__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IndexationQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation Quote</label>
    <type>Checkbox</type>
</CustomField>