force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_indicateur_Approbation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_indicateur_Approbation__c</fullName>
    <formula>IF( LPCR_ApprobationPrix__c  = &apos;1&apos;,IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;,30,30),
    IF( LPCR_ApprobationPrix__c=&apos;0&apos;,IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,30,30),NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicateur Approbation</label>
    <type>Text</type>
</CustomField>