force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_InferieurPP__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InferieurPP__c</fullName>
    <formula>IF( (LPCR_PrixBerceau__c -  (SBQQ__AdditionalDiscount__c  /  SBQQ__Quantity__c ))  &lt;  LPCR_PrixPlancher__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inférieur au Prix Plancher</label>
    <type>Checkbox</type>
</CustomField>