force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Majoration__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Majoration__c</fullName>
    <label>Majoration Unitaire Annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>