force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_MasterContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MasterContrat__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__MasterContract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Contrat</label>
    <type>Text</type>
</CustomField>