force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_MontantAnnuelForfaitMICRO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantAnnuelForfaitMICRO__c</fullName>
    <description>champ utilisé sur l&apos;annexe 2 MICRO</description>
    <formula>IF(BEGINS( SBQQ__ProductCode__c, &apos;BerceauMicro&apos;), LPCR_PrixUnitaire__c * LPCR_Creche__r.LPCR_TypeMensualisation__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>champ utilisé sur l&apos;annexe 2 MICRO</inlineHelpText>
    <label>Montant annuel forfait MICRO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>