force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_MontantIndexationContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantIndexationContrat__c</fullName>
    <formula>IF( LPCR_TypeAvenant__c =&apos;	Amendement d\&apos;indexation&apos;, LPCR_IndexationCustom__c  , SBQQ__Quote__r.LPCR_MontantIndexationContrat__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Indexation Contrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>