force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NombreDeJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreDeJour__c</fullName>
    <label>Nombre de jours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>