force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumBonCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumBonCommande__c</fullName>
    <label>Numéro bon de commande</label>
    <length>80</length>
    <type>Text</type>
</CustomField>