force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumeroBonCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroBonCommande__c</fullName>
    <formula>SBQQ__Quote__r.LPCR_NumeroDevis__c &amp;&quot;-&quot;&amp; LPCR_NumeroPOAutomatique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro De Bon De Commande</label>
    <type>Text</type>
</CustomField>