force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumeroDeBonDeCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroDeBonDeCommande__c</fullName>
    <formula>SBQQ__Quote__r.LPCR_NumeroDuDevis__c &amp;&quot;-&quot;&amp; LPCR_NumeroPOAutomatique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero De Bon De Commande</label>
    <type>Text</type>
</CustomField>