force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumeroLigne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroLigne__c</fullName>
    <formula>IF(SBQQ__Quote__r.RecordType.DeveloperName = &quot;Reservataire&quot;,   LPCR_NumeroPOAutomatique__c ,
IF(SBQQ__Quote__r.RecordType.DeveloperName = &quot;Referencement&quot;,   LPCR_NumeroPOAutomatique__c , NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro De La Ligne</label>
    <type>Text</type>
</CustomField>