force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumeroPOAutomatique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroPOAutomatique__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Numero PO Automatique</label>
    <type>AutoNumber</type>
</CustomField>