force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_NumeroPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroPurchaseOrder__c</fullName>
    <label>PO numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>