force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_OptionNumber__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OptionNumber__c</fullName>
    <label>Option Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>