force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_ParticipationCAFHoraire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ParticipationCAFHoraire__c</fullName>
    <formula>IF(CONTAINS(SBQQ__Quote__r.RecordType.DeveloperName,&apos;Accueil&apos;),
IF(TEXT(SBQQ__Quote__r.LPCR_Creche__r.LPCR_TypeCreche__c) != &apos;MAC&apos;,
NULL,
SBQQ__Quote__r.LPCR_Creche__r.LPCR_MontantPSU__c - LPCR_TauxHoraire__c)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participation CAF Horaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>