force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PGFDossier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PGFDossier__c</fullName>
    <label>CA Global (Bcx+ FD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>