force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact principal DEL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lignes de devis (Contact principal)</relationshipLabel>
    <relationshipName>Lignes_de_devis2</relationshipName>
    <type>Lookup</type>
</CustomField>