force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PriorQty__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PriorQty__c</fullName>
    <label>Prior Quantity from Original QL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>