force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrixBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixBerceau__c</fullName>
    <label>Prix Berceau</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>