force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PRIXINFERIEURPLANCHER__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PRIXINFERIEURPLANCHER__c</fullName>
    <formula>IF( LPCR_PrixBerceau__c &gt;  SBQQ__NetPrice__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix inférieur plancher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>