force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrixPlancher__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixPlancher__c</fullName>
    <label>Prix Plancher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>