force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrixPlancherProvince__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixPlancherProvince__c</fullName>
    <label>Prix Plancher Province</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>