force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrixTotalAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixTotalAnnuel__c</fullName>
    <description>prix unitaire annuel x quantité</description>
    <formula>LPCR_PrixUnitaire__c * SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>prix unitaire annuel x quantité</inlineHelpText>
    <label>Prix total annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>