force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_PrixUnitaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixUnitaire__c</fullName>
    <formula>SBQQ__ListPrice__c - ROUND(SBQQ__ListPrice__c * SBQQ__TotalDiscountRate__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prix catalogue remisé ou majoré.</inlineHelpText>
    <label>Prix Unitaire Annuel Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>