force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Quote_Recalculated__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Quote_Recalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Recalculated</label>
    <type>Checkbox</type>
</CustomField>