force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_QuoteOriginal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_QuoteOriginal__c</fullName>
    <formula>CASESAFEID(SBQQ__Quote__r.SBQQ__MasterContract__r.SBQQ__Quote__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote original</label>
    <type>Text</type>
</CustomField>