force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_RefCodeProduit__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RefCodeProduit__c</fullName>
    <label>Référence Code Produit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>