force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_Remise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Remise__c</fullName>
    <formula>SBQQ__AdditionalDiscount__c + LPCR_Indexation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>