force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_RemiseSum__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RemiseSum__c</fullName>
    <label>Remise Unitaire annuelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>