force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_RessourcePlafond__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourcePlafond__c</fullName>
    <label>Ressource Plafond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>