force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_RevenuFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RevenuFamille__c</fullName>
    <label>Ressource Famille</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>