force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_SuperieuPP__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SuperieuPP__c</fullName>
    <formula>IF( AND(SBQQ__AdditionalDiscount__c  &lt;&gt; 0,  LPCR_PrixUnitaire__c   &gt;=  LPCR_PrixPlancher__c,  OR( SBQQ__PriorQuantity__c =0, SBQQ__PriorQuantity__c = NULL ) ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supérieur au Prix Plancher</label>
    <type>Checkbox</type>
</CustomField>