force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_TauxEffort__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxEffort__c</fullName>
    <label>Taux Effort</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>