force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_TotalQuantityFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotalQuantityFormule__c</fullName>
    <formula>IF( OR(SBQQ__ProductCode__c == &apos;BerceauContratCadre&apos;,SBQQ__ProductCode__c == &apos;BerceauReservataire&apos;,SBQQ__ProductCode__c == &apos;BerceauGratuit&apos;),
        IF (ISBLANK(LPCR_TotalBerceauGratuitRegion__c),SBQQ__Quantity__c,SBQQ__Quantity__c +
        LPCR_TotalBerceauGratuitRegion__c),
        null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>