force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_TotalRegion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotalRegion__c</fullName>
    <label>Total Berceaux de la Région</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>