force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_TypeAvenant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAvenant__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.LPCR_TypeAvenant__c)</formula>
    <label>Type d&apos;avenant</label>
    <type>Text</type>
</CustomField>