force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LPCR_TypeDeDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDeDevis__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de devis</label>
    <type>Text</type>
</CustomField>