force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingFrequency__c</fullName>
    <description>Defines the billing frequency.</description>
    <inlineHelpText>Définit la fréquence de facturation.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>